# silly

./: .gitignore
Setzer2/: main.py
Setzer2/app/: font_manager.py  latex_db.py  service_locator.py
Setzer2/dialogs/: dialog_locator.py
Setzer2/dialogs/about/: about.py
Setzer2/dialogs/add_remove_packages/: add_remove_packages.py  add_remove_packages_viewgtk.py
Setzer2/dialogs/helpers/: dialog_viewgtk.py
Setzer2/dialogs/preferences/: preferences.py  preferences_viewgtk.py
Setzer2/keyboard_shortcuts/: shortcut_controller.py
Setzer2/settings/: settings.py
SilkTex_backup/: .gitignore  main.ui  pyproject.toml  setup.py
SilkTex_backup/data/: org.example.silktex.metainfo.xml.in
SilkTex_backup/data/css/: style.css
SilkTex_backup/data/misc/: meson.build
SilkTex_backup/data/resources/: silktex.gresource.xml
SilkTex_backup/data/resources/ui/: main_window.ui  snippet_dialog.ui
SilkTex_backup/data/templates/: letter.tex
SilkTex_backup/data/ui/: editor_view.ui  editorview.ui  main.ui  statusbar.ui  template_dialog.ui
SilkTex_backup/po/: letsgo.pot  meson.build
SilkTex_backup/src/: config.py  constants.py  latex.py  meson.build  preferences_dialog.py  project.py  snippets.py  spell_checker.py  template.py  template_manager.py  utils.py  window.py
SilkTex_backup/src/compile/: __init__.py  latexmk.py  rubber.py
SilkTex_backup/src/editor/: meson.build
SilkTex_backup/src/gui/: gui-infoscreen.py  gui-prefs.py
SilkTex_backup/src/preview/: preview_view.py
SilkTex_backup/src/silktex/: __init__.py
SilkTex_backup/src/utils/: document.py
silktex2/: AUTHORS  COPYING  README.md  main.blp  meson-post-install.py  meson.build  settings
silktex2/data/: meson.build  org.example.letsgo.desktop.in  org.example.letsgo.gschema.xml  org.example.letsgo.metainfo.xml.in  org.example.silktex.appdata.xml  org.example.silktex.desktop  org.example.silktex.desktop.in  org.example.silktex.gschema.xml
silktex2/data/icons/: meson.build
silktex2/data/misc/: gummi.desktop.in
silktex2/data/resources/: letsgo.gresource.xml  main.ui  meson.build  style.css
silktex2/data/resources/css/: style.css
silktex2/data/resources/ui/: main.ui  template_dialog.ui
silktex2/data/snippets/: meson.build
silktex2/data/templates/: article.tex  beamer.tex  book.tex  meson.build  report.tex
silktex2/data/ui/: document_statistics.ui  headerbar.ui  main_window.ui  meson.build  preferences.ui  preview_view.ui  project_sidebar.ui  sidebar.ui  snippet_dialog.ui  window.ui
silktex2/po/: LINGUAS  POTFILES
silktex2/src/: __init__.py  application.py  biblio.py  configfile.py  document_structure.py  editor.py  environment.py  external.py  importer.py  iofunctions.py  letsgo.in  letsgo.py  main.py  motion.py  signals.py  silktex.in  silktex.py  snippets_manager.py  tabmanager.py
silktex2/src/compile/: compiler.py  meson.build  texlive.py
silktex2/src/editor/: __init__.py  editor_view.py
silktex2/src/gui/: gui-import.py  gui-main.py  gui-menu.py  gui-preview.py  gui-project.py  gui-search.py  gui-snippets.py  gui-tabmanager.py  gui_menu.py  meson.build
silktex2/src/preview/: __init__.py  meson.build
silktex2/src/project/: project_sidebar.py
silktex2/src/ui/: preferences_dialog.py
